<resources>
    <string name="app_name">Sickness Locator</string>
    <string name="title_activity_maps">Sickness Map</string>
    <string name="title_activity_main">Reports</string>
    <string name="title_activity_settings">User Settings</string>
    <string name="title_activity_sickness_entry">Enter New Sickness</string>
    <string name="title_activity_reset">Reset Password</string>
    <string name="title_activity_register">Create An Account</string>
    <string name="enter_sickness">Enter Sickness</string>
    <string name="title_activity_report">Reports</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Log me in!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to send you password reset instructions.</string>
    <string name="facebook_app_id">1777516025798893</string>
    <string name="fb_login_protocol_scheme">fb1777516025798893</string>

    <string-array name="genders">
        <item>--Select--</item>
        <item>Female</item>
        <item>Male</item>
        <item>Do Not Disclose</item>
    </string-array>

    <string-array name="severity">
        <item>--Select--</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

    <string-array name="disease">
        <item>All</item>
        <item>Malaria</item>
        <item>Dengue</item>
        <item>Jaundice</item>
    </string-array>
</resources>
